tests/ui/any/static_method_bound.stderr
error[E0277]: the trait bound `(dyn Trait + 'static): TryAsDynCompatible` is not satisfied
  --> $DIR/static_method_bound.rs:30:60
   |
LL |     let b: &(dyn Trait + 'static) = try_as_dyn::<&Payload, dyn Trait + 'static>(&a).unwrap();
   |                                                            ^^^^^^^^^^^^^^^^^^^ the trait `TryAsDynCompatible` is not implemented for `(dyn Trait + 'static)`
   |
note: required by a bound in `try_as_dyn`
  --> $SRC_DIR/core/src/any.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
